fix collapse button

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -41,7 +41,7 @@
       padding: 10px;
   }
 
-  button {
+  .button {
       border: none;
       padding-right: 20px;
       cursor: pointer;
@@ -80,7 +80,7 @@
   0% {
     opacity: 0;
     transform: translateY(-100%);    
-    height: 0;
+    max-height: 0;
   }
   100% {
     opacity: 1;
